Fixed alignment

--- a/fridge/assets/css/general.css
+++ b/fridge/assets/css/general.css
@@ -64,7 +64,7 @@ body {
 
 #fridge-inside {
   display: none;
-  width: 550px;
+  width: 425px;
   margin-top: -75px;
   margin-left: 150px;
 }
